force-app/main/default/objects/Retail_Update_product_price_main__c/Retail_Update_product_price_main__c.object-meta.xml
<CustomObject>
    <label>Retail Update product price main</label>
    <nameField>
        <label>Retail Update product price main Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Update product price mains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>