force-app/main/default/objects/Retail_Update_product_price_main__c/fields/Updated_Price__c.field-meta.xml
<CustomField>
    <fullName>Updated_Price__c</fullName>
    <label>Updated Price</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>