force-app/main/default/objects/Retail_Update_product_price_main__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Warehouse</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Update product price mains</relationshipLabel>
    <relationshipName>Retail_Update_product_price_mains</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>