force-app/main/default/objects/Retail_Update_product_price_main__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Current_Price__c</columns>
    <columns>Updated_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>